crates/skribble_css/src/snapshots/skribble_css__scanner__tests__default_parameter.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 47
expression: "crate::test_utils::get_selector(&crate::test_utils::create_config(None).unwrap(),\n                                \"import { c } from 'skribble-css';\n\n    function awesome(a = c.lg.focus.$block) {\n     //\n    }\")"

---
.lg\:focus\:\$block:focus
