crates/skribble_css/src/snapshots/skribble_css__scanner__tests__escape_custom_css_value.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 178
expression: "crate::test_utils::get_selector(&crate::test_utils::create_config(None).unwrap(),\n                                \"\\\n    import { c } from 'skribble-css';\n\n    c.focus.text('rgb(0,0,0)');\")"

---
.focus\:text-\[rgb\(0\,0\,0\)\]:focus
