crates/skribble_css/src/snapshots/skribble_css__scanner__tests__function_args.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 121
expression: "crate::test_utils::get_selector(&crate::test_utils::create_config(None).unwrap(),\n                                \"\\\n    import clsx from 'clsx';\n    import { c } from 'skribble-css/client';\n    clsx(c.sm.m.$1)\n    \")"

---
.sm\:m\:\:\$1
