crates/skribble_css/src/snapshots/skribble_css__scanner__tests__generate_class_name.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 8
expression: "crate::test_utils::get_selector(&crate::test_utils::create_config(None).unwrap(),\n                                \"import { c } from 'skribble-css/client';\n    const d = c.md.focus.$block;\")"

---
.md\:focus\:\:\$block:focus
