crates/skribble_css/src/snapshots/skribble_css__scanner__tests__generate_custom_class.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 12
expression: "class_names.join(\"\\n\")"

---
.\[padding\:10px\]
.md-\[padding\:6px\]
.sm-\[padding\:16px\]
