crates/skribble_css/src/snapshots/skribble_css__scanner__tests__generate_from_arrays.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 68
expression: "class_names.join(\"\\n\")"

---
.md\:focus\:\$block:focus
.sm\:focus\:\$block:focus
.lg\:focus\:\$block:focus
