crates/skribble_css/src/snapshots/skribble_css__scanner__tests__generate_from_object_keys.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 82
expression: "class_names.join(\"\\n\")"

---
.md\:focus\:\$block:focus
.sm\:focus\:\$block:focus
.lg\:focus\:\$block:focus
