crates/skribble_css/src/snapshots/skribble_css__scanner__tests__import_as.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 34
expression: "crate::test_utils::get_selector(&crate::test_utils::create_config(None).unwrap(),\n                                \"\\\n    import { c as b } from 'skribble-css/client';\n    b.sm.focus.$grid\n    \")"

---
.sm\:focus\:\:\$grid:focus
