crates/skribble_css/src/snapshots/skribble_css__scanner__tests__inside_function_scope.snap
---
source: crates/skribble_css/src/scanner.rs
assertion_line: 52
expression: "crate::test_utils::get_selector(&crate::test_utils::create_config(None).unwrap(),\n                                \"import { c } from 'skribble-css/client';\n\n    function fun () {\n      c.lg.focus.$block;\n    }\")"

---
.lg\:focus\:\:\$block:focus
